Bug Fix: Adjust CSS for role name under avatar
The role name displayed under the avatar was overflowing on post user
section if the role name was too long. This fix makes the text smaller,
ellipsis the overflow, and adds a title so that on hover, the full role
name is displayed.

--- a/client/scss/ept/views/public/_posts.scss
+++ b/client/scss/ept/views/public/_posts.scss
@@ -58,9 +58,12 @@
       .user-role {
         padding-top: 0.625rem;
         color: $secondary-font-color;
-        font-size: 0.8125em;
+        font-size: 0.625em;
+        overflow: hidden;
+        white-space: nowrap;
         text-align: center;
         text-transform: uppercase;
+        text-overflow: ellipsis;
         width: 100%;
       }
     }
